Update cypress automation for evalart test

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "katalon-demo",
+  "name": "evalart-test",
   "version": "1.0.0",
   "description": "Automated tests",
   "license": "ISC",
